# Calc

./: .gitignore  README.md  pyproject.toml
src/latexcalc/: __init__.py  cli.py  errors.py  evaluator.py  output.py  parser.py  suggestions.py
tests/: test_cli.py  test_evaluator.py  test_parser.py  test_suggestions.py
